chinese: debian-zh.css: fix header overflow on small screen

--- a/webwml/chinese/debian-zh.css
+++ b/webwml/chinese/debian-zh.css
@@ -1,45 +1,46 @@
 /* Debian language css file for Chinese - zh-cn, zh-tw and zh-hk */
 /* please do not touch for now! - Jutta Wrage 2005 */
+/* modified by Boyuan Yang, 2017 */
 
 /*
 html[lang|=zh] #maincol {
-	font-family: Song, Arial, sans-serif; 
+    font-family: Song, Arial, sans-serif; 
 }
 body {
-	font-family: DejaVu Sans, sans-serif;
+    font-family: DejaVu Sans, sans-serif;
 }
 */
 
 html[lang|=zh] #maincol li {
-	line-height: 1.2em;
-	padding: 0.1em;
+    line-height: 1.2em;
+    padding: 0.1em;
 }
 
 html[lang|="zh"] h1, html[lang|="zh"] h2, html[lang|="zh"] h3, html[lang|="zh"] h4 {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 html[lang|="zh"] dl.gloss dt {
-	font-weight: 400;
-	font-size: 110%;
+    font-weight: 400;
+    font-size: 110%;
 }
 .active {
-	color: red;
+    color: red;
 }
 html[lang|=zh] #leftcol ul, html[lang|=zh] #leftcol, html[lang|=zh] #navbar a {
-	font-size: 1em;
-	font-weight: normal;
+    font-size: 1em;
+    font-weight: normal;
 }
 
 /*
 html[lang=zh-cn] em {
-	font-family: DejaVu Serif, AR PL KaitiM GB, AR PL UKai CN, "KaiTi_GB2312";
+    font-family: DejaVu Serif, AR PL KaitiM GB, AR PL UKai CN, "KaiTi_GB2312";
 }
 html[lang=zh-tw] em {
-	font-family: DejaVu Serif, AR PL UKai TW, DFKai-SB;
+    font-family: DejaVu Serif, AR PL UKai TW, DFKai-SB;
 }
 html[lang=zh-hk] em {
-	font-family: DejaVu Serif, AR PL UKai HK, DFKai-SB;
+    font-family: DejaVu Serif, AR PL UKai HK, DFKai-SB;
 }
 */
 
@@ -71,3 +72,10 @@ html[lang=zh-tw] q q:after { content: "\300F"; }
 html[lang=zh-tw] blockquote.quote p:first-child:before { content: "\300C"; }
 html[lang=zh-tw] blockquote.quote p:after { content: ""; }
 html[lang=zh-tw] blockquote.quote p.last:after { content: "\300D"; }
+
+/* For small screens */
+@media only screen and (max-width: 38em) {
+    div#navbar a:link, div#navbar a:visited {
+        margin: 0 0.5em 0 0 !important;
+    }
+}
